--- a/ElMundoAnimal/app/src/main/AndroidManifest.xml
+++ b/ElMundoAnimal/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElMundoAnimal">
-        <activity android:name="actividades.Registro"></activity>
+        <activity android:name="actividades.LoginEmail"></activity>
+        <activity android:name="actividades.Registro" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
