--- a/ElMundoAnimal/app/src/main/AndroidManifest.xml
+++ b/ElMundoAnimal/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElMundoAnimal">
-        <activity android:name="actividades.LoginEmail"></activity>
+        <activity android:name="actividades.Principal"></activity>
+        <activity android:name="actividades.LoginEmail" />
         <activity android:name="actividades.Registro" />
-        <activity android:name=".MainActivity">
+        <activity android:name="actividades.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
