--- a/ElMundoAnimal/app/build.gradle
+++ b/ElMundoAnimal/app/build.gradle
@@ -34,6 +34,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -51,5 +54,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    implementation "com.github.bumptech.glide:glide:4.11.0"
 
 }
