--- a/ElMundoAnimal/app/src/main/AndroidManifest.xml
+++ b/ElMundoAnimal/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nicolasfernandez.elmundoanimal">
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -9,14 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElMundoAnimal">
-        <activity android:name="actividades.CambiarDatosUsuario"></activity>
-        <activity android:name="actividades.CambiarContrasenia" />
-        <activity android:name="actividades.Carga" />
-        <activity android:name="actividades.PurebaConsultaFirebase" />
-        <activity android:name="actividades.Principal" />
-        <activity android:name="actividades.LoginEmail" />
-        <activity android:name="actividades.Registro" />
-        <activity android:name="actividades.MainActivity">
+        <activity android:name=".actividades.FichaAnimal"
+       android:configChanges="keyboardHidden|orientation|screenSize"
+        />
+        <activity android:name=".actividades.CambiarDatosUsuario" />
+        <activity android:name=".actividades.CambiarContrasenia" />
+        <activity android:name=".actividades.Carga" />
+        <activity android:name=".actividades.PurebaConsultaFirebase"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name=".actividades.Principal" />
+        <activity android:name=".actividades.LoginEmail" />
+        <activity android:name=".actividades.Registro" />
+        <activity android:name=".actividades.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
