Creacion de Funciones para el juego
Estoy implementando la funcionalidad:
- Al iniciar la actividad borramos la coleccion juego_usuario
- Insertamos en juego_usuario la coleccion de preguntas
- Sacamos una pregunta aleatoria y la sacamos al juego.

--- a/ElMundoAnimal/app/src/main/AndroidManifest.xml
+++ b/ElMundoAnimal/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElMundoAnimal">
-        <activity android:name=".actividades.Juego"></activity>
+        <activity android:name=".actividades.PruebaCargarDatos"></activity>
+        <activity android:name=".actividades.Juego" />
         <activity android:name=".actividades.SeccionAnimales" />
         <activity android:name=".actividades.ControlPeticionesAnimales" />
         <activity android:name=".actividades.PeticionAniadirAnimales" />
