--- a/ElMundoAnimal/app/src/main/AndroidManifest.xml
+++ b/ElMundoAnimal/app/src/main/AndroidManifest.xml
@@ -13,27 +13,63 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElMundoAnimal">
-        <activity android:name=".actividades.BuscarAnimal"></activity>
-        <activity android:name=".actividades.PruebaCargarDatos" />
-        <activity android:name=".actividades.Juego" />
-        <activity android:name=".actividades.SeccionAnimales" />
-        <activity android:name=".actividades.ControlPeticionesAnimales" />
-        <activity android:name=".actividades.PeticionAniadirAnimales" />
+        <activity android:name=".actividades.EnviarCorreo"
+            android:screenOrientation="portrait">
+        <intent-filter>
+
+            <category android:name="android.intent.category.LAUNCHER" />
+            <action android:name="android.intent.action.SEND" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <data android:mimeType="message/rfc822" />
+        </intent-filter>
+
+        </activity>
+        <activity android:name=".actividades.BuscarAnimal"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".actividades.Juego"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.SeccionAnimales"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.ControlPeticionesAnimales"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.PeticionAniadirAnimales"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".actividades.FichaAnimal"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity android:name=".actividades.CambiarDatosUsuario" />
-        <activity android:name=".actividades.CambiarContrasenia" />
-        <activity android:name=".actividades.Carga" />
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.CambiarDatosUsuario"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.CambiarContrasenia"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.Carga"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".actividades.PurebaConsultaFirebase"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <activity android:name=".actividades.Principal" />
-        <activity android:name=".actividades.LoginEmail" />
-        <activity android:name=".actividades.Registro" />
-        <activity android:name=".actividades.MainActivity">
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.Principal"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.LoginEmail"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.Registro"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".actividades.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
