Implementacion login con google
- En caso que sea la primera vez que te logeas entraras a una actividad de registro nick + nombre

--- a/ElMundoAnimal/app/src/main/AndroidManifest.xml
+++ b/ElMundoAnimal/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.ElMundoAnimal">
-        <activity android:name=".actividades.CrearNombreNickGoogle"></activity>
-        <activity android:name=".actividades.RecuperarContrasenia" />
+        <activity android:name=".actividades.CrearNombreNickGoogle"  android:screenOrientation="portrait"/>
+        <activity android:name=".actividades.RecuperarContrasenia"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".actividades.EnviarCorreo"
             android:screenOrientation="portrait">
